toolbar Catchy box gaps fixed

--- a/altokepez-app/src/components/Navigation/Toolbar/Toolbar.scss
+++ b/altokepez-app/src/components/Navigation/Toolbar/Toolbar.scss
@@ -15,6 +15,10 @@
    
 }
 
+.col-3, 
+.col-6{
+    padding: 0;
+}
 
 @keyframes fallToFixed{
     0%{
